NexAuth + Entra ID 연동

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,12 +15,14 @@ SESSION_SECRET=change_this_to_a_long_random_string_in_production
 # === 프록시 헤더 Provider (AUTH_PROVIDER=proxy_header 시) ===
 # PROXY_LOGOUT_URL=https://autoway.hdec.co.kr/logout
 
-# === Entra ID / OIDC Provider (AUTH_PROVIDER=oidc 시) ===
+# === NextAuth + Microsoft Entra ID ===
 # AZURE_AD_CLIENT_ID=your-azure-ad-client-id
 # AZURE_AD_CLIENT_SECRET=your-azure-ad-client-secret
 # AZURE_AD_TENANT_ID=your-tenant-id
-# OIDC_ISSUER=https://login.microsoftonline.com/{tenant-id}/v2.0
-# OIDC_REDIRECT_URI=https://aidesignlab.hdec.co.kr/api/auth/oidc/callback
+# NEXTAUTH_URL=http://localhost:3000
+# NEXTAUTH_SECRET=openssl rand -base64 32 로 생성
+# ALLOWED_EMAIL_DOMAINS=hdec.co.kr (현대건설 이메일 도메인, 쉼표로 여러 개 가능)
+# Azure Entra ID 앱 등록 Redirect URI: {NEXTAUTH_URL}/api/auth/callback/azure-ad
 
 # === SAML Provider (AUTH_PROVIDER=saml 시) ===
 # SAML_ENTRY_POINT=https://autoway.hdec.co.kr/saml/sso
