--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next-auth": "^4.24.10",
     "clsx": "^2.1.0",
+    "motion": "^11.11.17",
     "next": "^15.1.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
