chore: 배포 전 상태(프론트 모바일 확인)

--- a/.env.local.example
+++ b/.env.local.example
@@ -40,3 +40,9 @@ SESSION_SECRET=change_this_to_a_long_random_string_in_production
 # ===========================================
 # Azure Key Vault URL (선택, Azure 승인 후 설정)
 # KEY_VAULT_URL=https://your-keyvault.vault.azure.net/
+
+# ===========================================
+# FastAPI 백엔드 (Backend API)
+# ===========================================
+# FastAPI 서버 URL (프론트엔드에서 백엔드 API 호출 시 사용)
+# NEXT_PUBLIC_API_URL=http://localhost:8000
