--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -6,10 +6,11 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
-    "pydantic>=2.9.0",
+    "pydantic[email]>=2.9.0",
     "pydantic-settings>=2.6.0",
     "sqlmodel>=0.0.22",
     "python-dotenv>=1.0.0",
+    "python-jose[cryptography]>=3.3.0",
 ]
 
 [project.optional-dependencies]
