--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "buildCommand": "npm run build:web",
-  "outputDirectory": "apps/web/.next",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "rootDirectory": "apps/web"
+  "framework": "nextjs"
 }
