--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build:web",
-  "installCommand": "npm install"
+  "buildCommand": "npm run build",
+  "installCommand": "cd ../.. && npm install"
 }
