chore: Vercel 배포 설정 (rootDirectory 추가)

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,6 +8,10 @@
 # - saml: SAML 2.0
 AUTH_PROVIDER=dev
 
+# 개발 시 미들웨어 인증 우회 (true 시 /community, /admin, /playground 등 보호 경로도 인증 없이 접근)
+# 프로덕션에서는 설정하지 말 것
+# AUTH_BYPASS_MIDDLEWARE=true
+
 # 세션 비밀키 (프로덕션에서는 반드시 변경!)
 # 생성 방법: openssl rand -base64 32
 SESSION_SECRET=change_this_to_a_long_random_string_in_production
@@ -32,8 +36,9 @@ SESSION_SECRET=change_this_to_a_long_random_string_in_production
 # ===========================================
 # 데이터베이스 (Database)
 # ===========================================
-# PostgreSQL 연결 문자열 (Azure 승인 후 설정)
-# DATABASE_URL=postgresql://user:password@host:5432/dbname
+# Azure SQL Database 연결 문자열 (docs/AZURE_SQL_SETUP.md 참고)
+# 미설정 시 mockData 사용
+# DATABASE_URL="sqlserver://SERVER.database.windows.net:1433;database=DBNAME;user=USER;password=PASSWORD;encrypt=true"
 
 # ===========================================
 # 시크릿 관리 (Secrets)
