--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,12 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "next build",
+    "dev": "next dev -p 3001",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "prisma db seed",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "6.19.0",
+    "@tiptap/extension-image": "^2.11.3",
+    "@tiptap/extension-placeholder": "^2.11.3",
+    "@tiptap/pm": "^2.11.3",
+    "@tiptap/react": "^2.11.3",
+    "@tiptap/starter-kit": "^2.11.3",
     "clsx": "^2.1.0",
     "lucide-react": "^0.564.0",
     "motion": "^11.11.17",
@@ -18,6 +27,12 @@
     "react-dom": "^18.3.0",
     "tailwind-merge": "^2.2.0"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
+  "overrides": {
+    "minimatch": "10.2.2"
+  },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
@@ -26,6 +41,8 @@
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.6",
     "postcss": "^8.4.45",
+    "prisma": "6.19.0",
+    "tsx": "^4.19.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
