fix: vercel 설정 수정 (rootDirectory 제거)

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "framework": "nextjs",
-  "rootDirectory": "apps/web",
-  "installCommand": "cd ../.. && npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "cd ../.. && npm install"
 }
