--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "6.19.0",
+    "@tiptap/core": "^2.11.3",
     "@tiptap/extension-image": "^2.11.3",
     "@tiptap/extension-placeholder": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
