feat: Gmail SMTP 인증 및 Prisma 매직링크 스키마 반영

--- a/.env.local.example
+++ b/.env.local.example
@@ -19,14 +19,15 @@ SESSION_SECRET=change_this_to_a_long_random_string_in_production
 # === 프록시 헤더 Provider (AUTH_PROVIDER=proxy_header 시) ===
 # PROXY_LOGOUT_URL=https://autoway.hdec.co.kr/logout
 
-# === NextAuth + Microsoft Entra ID ===
-# AZURE_AD_CLIENT_ID=your-azure-ad-client-id
-# AZURE_AD_CLIENT_SECRET=your-azure-ad-client-secret
-# AZURE_AD_TENANT_ID=your-tenant-id
-# NEXTAUTH_URL=http://localhost:3000
+# === NextAuth + Email Magic Link (Resend SMTP 권장) ===
+# NEXTAUTH_URL=http://localhost:3001
 # NEXTAUTH_SECRET=openssl rand -base64 32 로 생성
 # ALLOWED_EMAIL_DOMAINS=hdec.co.kr (현대건설 이메일 도메인, 쉼표로 여러 개 가능)
-# Azure Entra ID 앱 등록 Redirect URI: {NEXTAUTH_URL}/api/auth/callback/azure-ad
+# EMAIL_FROM=AI 디자인랩 <onboarding@resend.dev>
+# EMAIL_SERVER_HOST=smtp.resend.com
+# EMAIL_SERVER_PORT=587
+# EMAIL_SERVER_USER=resend
+# EMAIL_SERVER_PASSWORD=re_xxxxxxxxxxxxxxxxxxxxx
 
 # === SAML Provider (AUTH_PROVIDER=saml 시) ===
 # SAML_ENTRY_POINT=https://autoway.hdec.co.kr/saml/sso
