--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "motion": "^11.11.17",
     "next": "^15.1.0",
     "next-auth": "^4.24.10",
+    "nodemailer": "^7.0.13",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "tailwind-merge": "^2.2.0"
@@ -43,8 +44,8 @@
     "eslint-config-next": "16.1.6",
     "postcss": "^8.4.45",
     "prisma": "6.19.0",
-    "tsx": "^4.19.0",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.19.0",
     "typescript": "^5"
   }
 }
