--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "db:seed": "prisma db seed",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "sync:operators": "node scripts/sync-operators.mjs",
+    "sync:allowlists": "node scripts/sync-operators.mjs"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
