--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "minimatch": "10.2.2"
   },
   "scripts": {
+    "dev": "npm run dev:web",
     "dev:web": "npm run dev --workspace=@aidesignlab/web",
+    "dev:api": "cd apps/api && uv run uvicorn app.main:app --reload --port 8000",
     "build:web": "npm run build --workspace=@aidesignlab/web",
-    "lint:web": "npm run lint --workspace=@aidesignlab/web"
+    "lint:web": "npm run lint --workspace=@aidesignlab/web",
+    "db:generate": "npm run prisma:generate --workspace=@aidesignlab/web",
+    "db:seed": "npm run db:seed --workspace=@aidesignlab/web"
   },
   "devDependencies": {
     "pre-commit": "^1.2.2"
