--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,8 @@
     "nodemailer": "^7.0.13",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "xlsx": "^0.18.5"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
